--- a/print.css
+++ b/print.css
@@ -1,10 +1,13 @@
 @media print {
-    td.table-particulars {
-        width: 3% !important;
-        padding: 8px 5px;
-    }
+    .sub-header-right {
+        display: block !important;
+      }
+   
 }
 @media (max-width:600px) {
+    .sub-header-right,.ac-summery{
+        display: none !important;
+      }
     body {
         font-family: Arial, sans-serif;
      
@@ -209,7 +212,22 @@
         font-weight: 600;
         font-size: 10px;
     }
+    .data-area {
+        width: 100%;
+        overflow-x: auto; /* Enables horizontal scroll */
+      }
     
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        min-width: 600px; /* Ensures table is wider than screen */
+      }
+     
+      th, td {
+     
+        padding: 10px;
+        text-align: left;
+      }
     /* width */
     .table-date {
        
