--- a/print.css
+++ b/print.css
@@ -1,13 +1,14 @@
 @media print {
-    .sub-header-right {
+    .sub-header-right,.summary{
         display: block !important;
       }
    
 }
 @media (max-width:600px) {
-    .sub-header-right,.ac-summery{
+    .sub-header-right,.summary{
         display: none !important;
       }
+    
     body {
         font-family: Arial, sans-serif;
      
